--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -19,7 +19,7 @@ platforms:
     box: opscode-debian-7.2.0
     box_url: http://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_debian-7.2.0_chef-provisionerless.box
   run_list:
-  - recipe[rackspace)_apt]
+  - recipe[rackspace_apt]
 
 suites:
 - name: default
